--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,14 +2,27 @@ body {
     background-color:blue;
 }
 header {
-    background-color: red;
+    background-image: url(../images/cat.webp);
+    height: 300px;
+    background-position: center;
 }
 main {
     background-color: green;
 }
 main p {
     font-family: Arial, Helvetica, sans-serif;
+    color: orange;
 }
 footer {
     background-color: pink;
+}
+.box {
+    background-color: yellow;
+    width: 45%;
+    float: left;
+    margin: 1em;
+    padding: 1em;
+}
+#box2 {
+    background-color:blueviolet;
 }
